force-app/src/objects/fferpcore__CompanySite__c.object
<CustomObject>
    <customHelpPage>fferpcore__CompanySiteHelp</customHelpPage>
    <description>Stores site details for specific companies.</description>
    <fields>
        <fullName>fferpcore__City__c</fullName>
        <description>Company site address city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Company__c</fullName>
        <description>Company to which this company site relates.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Company Sites</relationshipLabel>
        <relationshipName>CompanySites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__Country__c</fullName>
        <description>Company site address country.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsAddressValidated__c</fullName>
        <description>Indicates that the company site address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(fferpcore__Street__c) &amp;&amp;
              ISBLANK(fferpcore__City__c) &amp;&amp;
              ISBLANK(fferpcore__State__c) &amp;&amp;
              ISBLANK(fferpcore__PostalCode__c) &amp;&amp;
              ISBLANK(fferpcore__Country__c)
            ) &amp;&amp;
            ( fferpcore__Street__c  =  fferpcore__ValidatedStreet__c ) &amp;&amp;
            ( fferpcore__City__c =  fferpcore__ValidatedCity__c ) &amp;&amp;
            ( fferpcore__State__c =  fferpcore__ValidatedState__c ) &amp;&amp;
            ( fferpcore__PostalCode__c =  fferpcore__ValidatedPostalCode__c ) &amp;&amp;
            ( fferpcore__Country__c =  fferpcore__ValidatedCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that the company site address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__PostalCode__c</fullName>
        <description>Company site address postal code.</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__State__c</fullName>
        <description>Company site address state/province.</description>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Street__c</fullName>
        <description>Company site address street.</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedCity__c</fullName>
        <description>Address city validated by the external tax calculation service.</description>
        <label>Validated City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedCountry__c</fullName>
        <description>Address country validated by the external tax calculation service.</description>
        <label>Validated Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedPostalCode__c</fullName>
        <description>Address postal code validated by the external tax calculation service.</description>
        <label>Validated Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedState__c</fullName>
        <description>Address state or province validated by the external tax calculation service.</description>
        <label>Validated State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedStreet__c</fullName>
        <description>Address street validated by the external tax calculation service.</description>
        <label>Validated Street</label>
        <type>TextArea</type>
    </fields>
    <label>Company Site</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>